unpackaged/main/default/objects/Case/fields/Accepted_Not_Accepted_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Not_Accepted_Comments__c</fullName>
    <label>Accepted / Not Accepted Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>