unpackaged/main/default/objects/Case/fields/Accepted_Team__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Accepted Team)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>