unpackaged/main/default/objects/Case/fields/Brief_Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Brief_Referral_Reason__c</fullName>
    <label>Brief Referral Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>