unpackaged/main/default/objects/Case/fields/Client_No__c.field-meta.xml
<CustomField>
    <fullName>Client_No__c</fullName>
    <formula>Account.Client_No__c</formula>
    <label>Client No</label>
    <type>Text</type>
</CustomField>