unpackaged/main/default/objects/Case/fields/Date_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Referral__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of Referral</label>
    <type>Date</type>
</CustomField>