unpackaged/main/default/objects/Case/fields/Date_on_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Referral__c</fullName>
    <label>Date on Referral</label>
    <type>Date</type>
</CustomField>