unpackaged/main/default/objects/Case/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Episode does not belong to referred patient.</errorMessage>
        <filterItems>
            <field>ClinicalEncounter.PatientId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ClinicalEncounter</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>