unpackaged/main/default/objects/Case/fields/Last_Team_Referred_to__c.field-meta.xml
<CustomField>
    <fullName>Last_Team_Referred_to__c</fullName>
    <label>Last Team Referred to</label>
    <length>18</length>
    <type>Text</type>
</CustomField>