unpackaged/main/default/objects/Case/fields/Reason_for_Deferral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deferral__c</fullName>
    <label>Reason for Deferral</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>