unpackaged/main/default/objects/Case/fields/Referee_Advised__c.field-meta.xml
<CustomField>
    <fullName>Referee_Advised__c</fullName>
    <label>Referee Advised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>