unpackaged/main/default/objects/Case/fields/Referral_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Action_Date__c</fullName>
    <label>Referral Accepted/Rejected Date</label>
    <type>Date</type>
</CustomField>