unpackaged/main/default/objects/Case/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal Health Service</fullName>
            </value>
            <value>
                <fullName>ALRM Lawyer</fullName>
            </value>
            <value>
                <fullName>CAMHS</fullName>
            </value>
            <value>
                <fullName>CentreLink</fullName>
            </value>
            <value>
                <fullName>Child Protection Agency</fullName>
            </value>
            <value>
                <fullName>Combined Regional Triage</fullName>
            </value>
            <value>
                <fullName>Court (Magistrate)</fullName>
            </value>
            <value>
                <fullName>Court Diversion Program / TIC</fullName>
            </value>
            <value>
                <fullName>DASSA</fullName>
            </value>
            <value>
                <fullName>DCP (was Families SA)</fullName>
            </value>
            <value>
                <fullName>Disability SA</fullName>
            </value>
            <value>
                <fullName>Domiciliary Care</fullName>
            </value>
            <value>
                <fullName>DVA</fullName>
            </value>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Episode integration</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>FCADS</fullName>
            </value>
            <value>
                <fullName>FMC Paediatric Department</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Govt Residential Aged Care Facility</fullName>
            </value>
            <value>
                <fullName>GSB, MAP</fullName>
            </value>
            <value>
                <fullName>Headspace - Early Psychosis Program (formerly  hYEPP)</fullName>
            </value>
            <value>
                <fullName>Headspace - emerge</fullName>
            </value>
            <value>
                <fullName>Headspace - general</fullName>
            </value>
            <value>
                <fullName>Homeless Services</fullName>
            </value>
            <value>
                <fullName>Hospital - Private</fullName>
            </value>
            <value>
                <fullName>Hostel / Boarding House</fullName>
            </value>
            <value>
                <fullName>Legal Service</fullName>
            </value>
            <value>
                <fullName>LMH Paediatric Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>