unpackaged/main/default/objects/Case/fields/Referrer_Details__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Details__c</fullName>
    <label>Referrer Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>