unpackaged/main/default/objects/Case/fields/Team_Referred_From__c.field-meta.xml
<CustomField>
    <fullName>Team_Referred_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Referred From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Internal Referral Team)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>