unpackaged/main/default/objects/Case/fields/Team_Referred_to__c.field-meta.xml
<CustomField>
    <fullName>Team_Referred_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the same picklist as the internal referral team to choose who to refer to.</inlineHelpText>
    <label>Team Referred to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>