unpackaged/main/default/objects/Case/recordTypes/Referral_Management_Plan.recordType-meta.xml
<RecordType>
    <fullName>Referral_Management_Plan</fullName>
    <active>true</active>
    <businessProcess>Referral Support Process</businessProcess>
    <label>Referral Management Plan</label>
</RecordType>