unpackaged/main/default/objects/Case/validationRules/Referral_Accepted_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Accepted_No</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Referral_Management_Plan&#39; ,
				TEXT(Status) == &#39;Declined&#39;,
				OR(ISBLANK(Accepted_Not_Accepted_Comments__c),
							TEXT(Referee_Advised__c)== &#39;&#39;
			  
						))</errorConditionFormula>
    <errorMessage>Please provide Accepted/Not Accepted Comments, Referee Advised</errorMessage>
</ValidationRule>