unpackaged/main/default/objects/Case/validationRules/Referral_Accepted_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Accepted_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Referral_Management_Plan&#39; ,
				TEXT(Status) == &#39;Accepted&#39; , 
				OR(ISBLANK(Accepted_Not_Accepted_Comments__c),
  						ISBLANK(Accepted_Team__c),
						ISBLANK(Episode__c)
						))</errorConditionFormula>
    <errorMessage>Please provide Accepted/ Not Accepted Comments, Accepted Team, and Episode.</errorMessage>
</ValidationRule>