unpackaged/main/default/objects/Case/validationRules/Referral_Deferred_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Deferred_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  RecordType.DeveloperName == &#39;Referral_Management_Plan&#39; ,
				TEXT(Status) == &#39;Deferred&#39;,
    ISBLANK(Reason_for_Deferral__c) )</errorConditionFormula>
    <errorMessage>Please provide Reason for Deferral</errorMessage>
</ValidationRule>