unpackaged/main/default/objects/Case/validationRules/Referral_Type_Internal.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Type_Internal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &#39;Referral_Management_Plan&#39; ,
  TEXT(Referral_Type__c) == &#39;Internal&#39;,
  ISBLANK(Team_Referred_From__c))</errorConditionFormula>
    <errorMessage>Please provide Referral Team From</errorMessage>
</ValidationRule>